# PN-TEST

./: AmplifierClient.h  CMakeLists.txt  README.md  Samples.h  inpout32.h  qml.qrc  widget.h
qml/: App.qml  Bpp01.qml  Screen01.qml  ab.qml
src/: ampli.cpp  main.cpp  mainold.cpp
